Fix: allow null trace fields for profile filtering